<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game.GameStartFragment">

    <ImageView
        android:id="@+id/vDoctorOh"
        android:layout_width="310dp"
        android:layout_height="310dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/doctor_select_difficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vDoctorOh"
        android:layout_marginTop="60dp">

        <Button
            android:id="@+id/btnEasy"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_easy"
            android:fontFamily="@font/dunggeunmo_pro" />

        <Button
            android:id="@+id/btnMid"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_mid"
            android:fontFamily="@font/dunggeunmo_pro" />

        <Button
            android:id="@+id/btnHard"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_hard"
            android:fontFamily="@font/dunggeunmo_pro"  />

        <Button
            android:id="@+id/btnVeryHard"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_very_hard"
            android:fontFamily="@font/dunggeunmo_pro" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.poquiz.presentation.customview.PoQuizButton
        android:id="@+id/btnStartGame"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:layout_marginBottom="80dp"
        app:btnText="@string/btn_start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>