<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.JoinFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="116dp"
        android:src="@drawable/ditto_removed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/Text.Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="264dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_id"
            style="@style/PoQuiz.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="아이디"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperText="@string/join_id_require_dup_check">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Text"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_pw"
            style="@style/PoQuiz.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="비밀번호"
            app:boxStrokeColor="@color/text_input_stroke_color"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:helperText="@string/join_pw_rule">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Text"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_nick"
            style="@style/PoQuiz.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="닉네임"
            app:boxStrokeColor="@color/text_input_stroke_color"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperText="@string/join_nickname_require_dup_check"
            app:counterEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Text"
                android:textSize="20sp"
                android:maxLength="10"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.poquiz.presentation.customview.PoQuizButton
        android:id="@+id/btnJoin"
        android:layout_width="140dp"
        android:layout_height="90dp"
        app:btnText="@string/btn_join"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
        android:layout_marginTop="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>